--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <li class="sidebar-nav-item"><a href="https://discord.com/oauth2/authorize?client_id=869617185444749332&permissions=1342565601&scope=bot">Invite</a></li>
                 <li class="sidebar-nav-item"><a href="https://top.gg/bot/869617185444749332">View us on Top.gg!</a></li>
                 <li class="sidebar-nav-item"><a href="https://top.gg/bot/869617185444749332/vote">Vote for us!</a></li>
-                <li class="sidebar-nav-item"><a href="https://discord.gg/KnRx78fZYV">Support Server!</a></li>
+                <li class="sidebar-nav-item"><a href="https://discord.gg/Qn8f8rNRbXa">Support Server!</a></li>
             </ul>
         </nav>
         <!-- Header-->
