--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <li class="sidebar-nav-item"><a href="https://discord.com/oauth2/authorize?client_id=869617185444749332&permissions=1342565601&scope=bot">Invite</a></li>
                 <li class="sidebar-nav-item"><a href="https://top.gg/bot/869617185444749332">View us on Top.gg!</a></li>
                 <li class="sidebar-nav-item"><a href="https://top.gg/bot/869617185444749332/vote">Vote for us!</a></li>
-                <li class="sidebar-nav-item"><a href="https://discord.gg/Qn8f8rNRbXa">Support Server!</a></li>
+                <li class="sidebar-nav-item"><a href="https://discord.gg/Qn8f8rNRbX">Support Server!</a></li>
             </ul>
         </nav>
         <!-- Header-->
@@ -35,7 +35,7 @@
                 <h1 class="mb-1">Reaction Roles!</h1>
                 <h3 class="mb-5"><em>A Discord Solution!</em></h3>
                 <a class="btn btn-primary btn-xl" href="https://discord.com/oauth2/authorize?client_id=869617185444749332&permissions=1342565601&scope=bot" target = "_blank">Invite Me!</a>
-                <a class="btn btn-primary btn-xl" href="https://discord.gg/KnRx78fZYV" target = "_blank">Support Server!</a>
+                <a class="btn btn-primary btn-xl" href="https://discord.gg/Qn8f8rNRbX" target = "_blank">Support Server!</a>
                 <a class="btn btn-primary btn-xl" href="https://top.gg/bot/869617185444749332/vote" target = "_blank">Vote for us!</a>
             </div>
         </header>
